# main-web

./: README.md  main.tf
.github/workflows/: Terraform_Release.yml  apply.yml  blank.yml  blank.yml-bkp  build_deploy.yml  lambda_layers_file.sh  main.yml  sonarqube-scan.yml-bkp  test.yml
backend/: Dockerfile  backend-build.py  backend-build.sh  config.py  export-deps.sh  main.tf  pyproject.toml  requirements.txt-bkp  sonar-project.properties  start.py  test.txt
backend/api/: api.py
backend/api/endpoints/: mda_sys_reports.py  sample.py
backend/entities/: user_data_model.py
backend/repositories/: fetch_update_user_data.py
backend/services/: mda_sys_reports.py  sst_user_info.py
backend/utils/: utility_file.py
frontend/: README.md  angular.json  frontend-build.sh  karma.conf.js  main.tf  package.json  sonar-project.properties  tsconfig.spec.json
frontend/src/: styles.css
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.interceptor.spec.ts  auth.interceptor.ts
frontend/src/app/component/bulkupload/: bulkupload.component.html  bulkupload.component.spec.ts  bulkupload.component.ts
frontend/src/app/guards/: permission.guard.ts
frontend/src/app/interface/: matrix.ts
frontend/src/app/pipe/: highlight.pipe.spec.ts  highlight.pipe.ts
frontend/src/app/services/: api.service.spec.ts  api.service.ts  auth.service.spec.ts  auth.service.ts  permission.service.spec.ts  permission.service.ts
frontend/src/environments/: environment.ts
lambda_code/: index.js
tf_backend/: dev.tfbackend
(+27 files in other folders)
